Modified max width of sections to avoid cutting off x overflow

--- a/css/clean-styles.css
+++ b/css/clean-styles.css
@@ -163,7 +163,9 @@ body {
     vertical-align: baseline;
     margin: 0;
     padding: 0;
+}
 
+section {
     max-width: 50em;
     margin: auto;
 }
